# iaora-style

./: AUTHORS  CHANGELOG  CMakeLists.txt  README.md  install.sh
color-schemes/: CMakeLists.txt  IaOraArctic.colors  IaOraBlue.colors  IaOraGray.colors  IaOraNight.colors  IaOraOrange.colors  IaOraSmooth.colors  IaOraSteel.colors
kwin-client/: CMakeLists.txt  iaora.desktop  kwin_iaora.cpp  kwin_iaora.h
kwin-client/config/: CMakeLists.txt  iaora_config.cpp  iaora_config.h  iaora_config.ui
src/: CMakeLists.txt  iaora-kde.cpp  iaora-kde.h  iaora-kde.themerc  iaora-qt.cpp  iaora-qt.h  iaora.json  iaoracolors  iaorastyle.cpp  iaorastyle.h  iaorastyle_button.cpp  iaorastyle_combobox.cpp  iaorastyle_dial.cpp  iaorastyle_frame.cpp  iaorastyle_icons.cpp  iaorastyle_menu.cpp  iaorastyle_progressbar.cpp  iaorastyle_q3listview.cpp  iaorastyle_scrollbar.cpp  iaorastyle_slider.cpp  iaorastyle_spinbox.cpp  iaorastyle_symbols.cpp  iaorastyle_tabbar.cpp  iaorastyle_toolbutton.cpp  iaorastyle_window.cpp
src/config/: CMakeLists.txt  sk_config.cpp  sk_config.h  sk_dialog.ui  sk_preview1.ui  sk_preview2.qrc  sk_preview2.ui
src/config/images/: README
test/: CMakeLists.txt  mainwindow.ui  mywindow.cpp  mywindow.h  qttest.cpp
